syntax = "proto3";

option java_package = "com.listing.protobuf";
option java_outer_classname = "listing_microservice";

package listing;

service ListingService {
  rpc UpdateListingStatus(UpdateListingStatusRequest) returns (UpdateListingStatusResponse);
}

message UpdateListingStatusRequest {
  string listing_id = 1;
  string status = 2;
}

message UpdateListingStatusResponse {
  string message = 1;
}