syntax = "proto3";

option java_package = "io.grpc.tokenization";
option java_outer_classname = "TokenizationServiceProto";

package tokenization;

service TokenizationService {
  rpc Tokenize(TokenizationRequest) returns (TokenizationResponse) {}
}

message TokenizationRequest {
  string tokenId = 1;
  bytes chunk = 2;
}

message TokenizationResponse {
  string tokenURI = 1;
}